# adaption-data-generation

./: AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
configs/dataset/: huggingface.yaml  kaggle.yaml  local.yaml
configs/generation/: adaption.yaml  default.yaml
configs/model/: hf_transformers.yaml  unsloth.yaml  vllm.yaml
docs/: PLAN.md  overview.md
models/: __init__.py  base.py  hf_model.py  unsloth_model.py  vllm_model.py
scripts/: create_issues.js  create_issues.sh  modal_run_generation.py
src/data/: loaders.py  processors.py
src/generation/: generator.py
src/utils/: helpers.py
tests/: test_generation.py  test_loaders.py  test_models.py
