[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaption-data-generation"
version = "0.1.0"
description = "Dataset generation using Adaption API, HuggingFace, and Kaggle sources"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pandas>=2.0.0",
    "datasets>=2.18.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "kaggle>=1.6.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
vllm = ["vllm>=0.4.0"]
unsloth = ["unsloth>=2024.1"]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]

[project.scripts]
generate = "main:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
